--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <canvas id="fundo"></canvas>
     <div class="search-container">
         <input type="text" id="searchInput" placeholder="Digite o nome do item de equipamento...">
+        <p class="subtexto">API: </p>
     </div>
     <div id="results" class="results"></div>
 
     <script src="script.js"></script>
     <script src="script-fundo.js"></script>
 </body>
+
 </html>
