--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pesquisa D&D 5e Equipment</title>
+    <title>Biblioteca de itens D&D</title>
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/6545/6545894.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -20,3 +20,4 @@
 </body>
 
 </html>
+
