--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <canvas id="fundo"></canvas>
     <div class="search-container">
         <input type="text" id="searchInput" placeholder="Digite o nome do item de equipamento...">
-        <p class="subtexto">API: </p>
+        <p class="subtexto">API: https://www.dnd5eapi.co/api/equipment</p>
     </div>
     <div id="results" class="results"></div>
 
@@ -20,4 +20,5 @@
 </body>
 
 </html>
+
 
