--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <canvas id="fundo"></canvas>
     <div class="search-container">
-        <input type="text" id="searchInput" placeholder="Digite o nome do item de equipamento...">
+        <input type="text" id="searchInput" placeholder="Type equipment name...">
         <p class="subtexto">API: https://www.dnd5eapi.co/api/equipment</p>
     </div>
     <div id="results" class="results"></div>
@@ -20,5 +20,6 @@
 </body>
 
 </html>
+
 
 
